# P2P-AdHoc-Chat-Haskell

./: ChangeLog.md  P2P_AdHoc.cabal  README.md  p2pAdHocChat.cabal  package.yaml
src/: P2P_AdHoc.hs  makefile
src/Related_stuff_but_not_required/: minimalM  minimalM.hs
