name:                Whatsapp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/#readme
license:             BSD3
license-file:        LICENSE
author:              Angad&Akash
maintainer:          example@example.com
copyright:           2017 Angad&Akash
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable RoboGame-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vty
                     , process
                     , brick
                     , mtl                   
                     , Whatsapp
                     , network
                     , microlens
                     , microlens-th
                     , split
  default-language:    Haskell2010

test-suite RoboGame-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Whatsapp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Whatsapp
